test/spec_vectors/simd_f64x2_rounding/fail/module_21.wat
(module (func $f64x2.ceil-arg-empty (result v128) (f64x2.ceil)))